altered wishlist styling to allow for items to populate out of view with a scrollbar to prevent extremely long wishlists

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,23 +1,22 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: url("./assets/images/backtexture.jpg");
-    background-repeat: repeat;
-    background-size: 1600px 840px;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: url("./assets/images/backtexture.jpg");
+  background-repeat: repeat;
+  background-size: 1600px 840px;
 }
 
 @font-face {
-    font-family: genTitle;
-    src: url(./assets/fonts/balloonblack.ttf);
+  font-family: genTitle;
+  src: url(./assets/fonts/balloonblack.ttf);
 }
 
-
 main {
-    padding: 0;
-    display: flex;
-    flex-direction: column;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 /* .navbar {
@@ -27,106 +26,130 @@ main {
 } */
 
 #logo {
-    width: 400px;
-    background-image: none;
+  width: 400px;
+  background-image: none;
 }
 
 h1 {
-    background-image: none;
-    font-size: 24px;
+  background-image: none;
+  font-size: 24px;
 }
 
 .dashboard {
-    /* background-color: lightgray; */
-    /* width: 100%; */
-    /* align-items: center; */
-    /* justify-content: space-between; */
-    background-image: linear-gradient(to right, red , yellow);
+  /* background-color: lightgray; */
+  /* width: 100%; */
+  /* align-items: center; */
+  /* justify-content: space-between; */
+  background-image: linear-gradient(to right, red, yellow);
 }
 
 .wishCard {
-    border: 2px solid black;
-    display: flex;
-    flex-direction: column;
-    background-image: url("./assets/images/genback.png");
-    background-size: 400px 400px;
-    background-color: lightblue;
-    width: 400px;
-    height: 400px;
-    margin: 20px;
-    align-items: center;
-    justify-content: flex-start;
-    box-shadow: black 5px 5px 5px;
+  border: 2px solid black;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-image: url("./assets/images/genback.png");
+  background-size: 400px 400px;
+  background-color: lightblue;
+  max-width: 400px;
+  max-height: 400px;
+  margin: 20px;
+  align-items: center;
+  justify-content: center;
+  box-shadow: black 5px 5px 5px;
+  overflow-y: scroll;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  /* background: #f1f1f1; */
+  background: none;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 #wishTitle {
-    background-image: none;
+  background-image: none;
 }
 
 #myListTitle {
-    font-family: genTitle;
-    font-size: 50px;
-    font-weight: normal;
-    text-align: center;
-    color: red;
-    -webkit-text-stroke: 1px black;
+  font-family: genTitle;
+  font-size: 50px;
+  font-weight: normal;
+  text-align: center;
+  color: red;
+  -webkit-text-stroke: 1px black;
+  width: 390px;
 }
 
 #addItem {
-    background-image: none;
-    height: 30px;
-    width: fit-content;
-    padding: 2px;
-    background-color: red;
-    border: 1px solid black;
+  background-image: none;
+  height: 30px;
+  width: fit-content;
+  padding: 2px;
+  background-color: red;
+  border: 1px solid black;
 }
 
 #listItem {
-    background-image: none;
-    display: flex;
-    width: 90%;
+  background-image: none;
+  display: flex;
+  width: 90%;
 }
 
 #itemName {
-    width: 80%;
-    background-image: none;
+  width: 80%;
+  background-image: none;
 }
 
 #removeItem {
-    height: 30px;
-    width: fit-content;
-    padding: 2px;
-    margin: 2px;
-    margin-left: 10px;
-    background-image: none;
-    background-color: red;
-    border: 1px solid black;
+  height: 30px;
+  width: fit-content;
+  padding: 2px;
+  margin: 2px;
+  margin-left: 10px;
+  background-image: none;
+  background-color: red;
+  border: 1px solid black;
 }
 
 #received {
-    height: 30px;
-    width: fit-content;
-    padding: 2px;
-    margin: 2px;
-    background-image: none;
-    background-color: green;
-    border: 1px solid black;
+  height: 30px;
+  width: fit-content;
+  padding: 2px;
+  margin: 2px;
+  background-image: none;
+  background-color: green;
+  border: 1px solid black;
 }
 
 #tempnav {
-    width: 100%;
-    background-image: none;
-    margin-left: 30px;
-    margin-right: 30px;
-    align-items: center;
-    justify-content: space-between;
+  width: 100%;
+  background-image: none;
+  margin-left: 30px;
+  margin-right: 30px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 #under {
-    font-size: 60px;
-    font-weight: bold;
-    color: red;
-    text-align: center;
-    margin-top: 10px;
-    -webkit-text-stroke: 2px black;
+  font-size: 60px;
+  font-weight: bold;
+  color: red;
+  text-align: center;
+  margin-top: 10px;
+  -webkit-text-stroke: 2px black;
 }
